# MedSDoH

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
model/SDoH/: schema.dtd  used_resources.txt
model/SDoH/context/: contextRule.txt
model/SDoH/regexp/: resources_regexp_readversechildhoodexperience.txt  resources_regexp_reemergencyhousing.txt  resources_regexp_refinancialstrain.txt  resources_regexp_refoodinsecurity.txt  resources_regexp_regeneralsocialsupport.txt  resources_regexp_rehousingexposure.txt  resources_regexp_rehousinghomeless.txt  resources_regexp_rehousinginstability.txt  resources_regexp_reinstrumentalsupport.txt  resources_regexp_reloneliness.txt  resources_regexp_remaritaldivorced.txt  resources_regexp_remaritalmarried.txt  resources_regexp_remaritalsingle.txt  resources_regexp_remaritalwidowed.txt  resources_regexp_renoemotionalsupport.txt  resources_regexp_renosocialnetwork.txt  resources_regexp_reoccupationalnightshift.txt  resources_regexp_reraceethnicityany.txt  resources_regexp_reraceethnicityhispanic.txt  resources_regexp_retemporaryhousing.txt  resources_regexp_retransportationbarrier.txt  resources_regexp_reunstablehousing.txt
models/: runMedTagger-fit-sdoh.sh
models/MedSDoH/: schema.dtd  used_resources.txt
models/SDoH/: schema.dtd  used_resources.txt
notebooks/: error_analysis.ipynb  evaluation.ipynb  run_model.ipynb
references/: category_definition.csv  sdoh_concept_definition.csv
reports/figures/: task_flow_figure.pptx
src/med_sdoh/: evaluate.py  model.py  utils.py
src/sdoh_tagger/: evaluate.py  model.py
(+54 files in other folders)
