[build-system]
requires = ["setuptools>=62.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "sdoh_tagger"
version = "0.0.1"
description = "SDoH Tagger"
authors =  [
  { name = "Jaerong Ahn", email = "jaerong.ahn@uth.tmc.edu" },
  { name = "Sunyang Fu", email = "sunyang.fu@uth.tmc.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.11"
[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]
color = false
include = '^src/.*\.py$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
reportMissingImports = true
